fix for experience icons on mobile

--- a/src/app/app-experience/app-experience.component.css
+++ b/src/app/app-experience/app-experience.component.css
@@ -190,5 +190,8 @@
     .tree-box-inner-p {
         text-align: left;
     }
+    .tree-box-inner:hover .tree-box-fa {
+        color: initial;
+    }
 }
 
